--- a/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Admin Panel</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif, sans-serif;
+        }
+
         .admin-dashboard-body {
             display: flex;
-            background-color: #f4f7fc;
-            font-family: 'Poppins', sans-serif;
+            min-height: 100vh;
         }
 
         .admin-sidebar {
@@ -20,17 +25,18 @@
             background-color: #1e1e1e;
             color: #fff;
             padding: 20px;
-            height: 100vh;
             position: fixed;
             top: 0;
             left: 0;
+            height: 100%;
             z-index: 10;
         }
 
         .admin-main-content {
             margin-left: 260px;
-            padding: 40px;
             width: calc(100% - 260px);
+            padding: 40px;
+            flex-grow: 1;
             position: relative;
             background-color: hsla(217,57%,97%,1);
             background-image: radial-gradient(at 78% 33%, hsla(28,100%,74%,0.4) 0px, transparent 50%), radial-gradient(at 0% 50%, hsla(355,100%,93%,1) 0px, transparent 50%), radial-gradient(at 0% 100%, hsla(22,100%,77%,1) 0px, transparent 50%);
@@ -113,7 +119,6 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
