refactor: rename admin genre controller and intorduce robust file pattern for the admin role

--- a/MusicPlatform/Areas/Admin/Views/GenreManagement/Add.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/GenreManagement/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model MusicPlatform.Web.ViewModels.Genre.GenreManagementAddViewModel
+﻿@model MusicPlatform.Web.ViewModels.Admin.GenreManagement.GenreManagementAddViewModel 
 
 @{
     ViewData["Title"] = "Add New Genre";
