--- a/MusicPlatform/Areas/Admin/Views/GenreManagement/Edit.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/GenreManagement/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MusicPlatform.Web.ViewModels.Genre.GenreEditViewModel
+﻿@model MusicPlatform.Web.ViewModels.Admin.GenreManagement.GenreEditViewModel
 
 @{
     ViewData["Title"] = "Edit Genre";
