--- a/MusicPlatform/Areas/Admin/Views/GenreManagement/Index.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/GenreManagement/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MusicPlatform.Web.ViewModels.Genre.GenreManagementIndexViewModel>
+﻿@model IEnumerable<MusicPlatform.Web.ViewModels.Admin.GenreManagement.GenreManagementIndexViewModel>
 
 @{
     ViewData["Title"] = "Manage Genres";
