--- a/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -108,7 +108,7 @@
                         <i class="fa fa-users"></i> Manage Users
                     </a>
                 </li>
-                <li><a asp-area="Admin" asp-controller="Genre" asp-action="Index"><i class="fa fa-list"></i> Manage Genres</a></li>
+                <li><a asp-area="Admin" asp-controller="GenreManagement" asp-action="Index"><i class="fa fa-list"></i> Manage Genres</a></li>
                 <li><a href="#"><i class="fa fa-flag"></i> Reports</a></li>
             </ul>
         </nav>
