--- a/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/MusicPlatform/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -102,7 +102,7 @@
         </div>
         <nav class="admin-nav">
             <ul>
-                <li><a asp-area="Admin" asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i> Dashboard</a></li>
+                <li><a asp-area="Admin" asp-controller="Dashboard" asp-action="Index"><i class="fa fa-home"></i> Dashboard</a></li>
                 <li><a href="#"><i class="fa fa-music"></i> Manage Tracks</a></li>
                 <li>
                     <a asp-area="Admin" asp-controller="UserManagement" asp-action="Index" class="nav-link">
@@ -110,7 +110,6 @@
                     </a>
                 </li>
                 <li><a asp-area="Admin" asp-controller="GenreManagement" asp-action="Index"><i class="fa fa-list"></i> Manage Genres</a></li>
-                <li><a href="#"><i class="fa fa-flag"></i> Reports</a></li>
             </ul>
         </nav>
         <div class="admin-sidebar-footer">
